Fix size warning get cropped

--- a/src/video/download-video/download-video.scss
+++ b/src/video/download-video/download-video.scss
@@ -236,7 +236,7 @@
     border: 1px dashed var(--theme-color);
     z-index: 2;
     font-size: 10pt;
-    width: 300px;
+    width: 200px;
     padding: 8px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 4px 8px 0px;
     pointer-events: none;
